--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 </head>
 
+<style>
+  body {
+    margin: 15px;
+  }
+</style>
+
 <body>
   <h1>Daftar Pelanggan Toko Incer</h1>
 
