menambah margin di formtambah dan formubah

--- a/formtambah.html
+++ b/formtambah.html
@@ -14,6 +14,12 @@
 
 <body>
   <h1>Formulir Tambah Pelanggan</h1>
+  
+  <style>
+  body {
+    margin: 15px;
+  }
+</style>
 
   <form class="mb-3">
     <div class="mb-3">
