--- a/formubah.html
+++ b/formubah.html
@@ -32,6 +32,12 @@
       <button class="btn btn-primary" id="tombolsimpan">Simpan</button>
     </div>
   </form>
+  
+  <style>
+  body {
+    margin: 15px;
+  }
+</style>
 
   <script type="module">
     import { ubahPelanggan, ambilPelanggan } from "./main.js";
