menambah fungsi undo

--- a/formtambah.html
+++ b/formtambah.html
@@ -38,6 +38,8 @@
       <button class="btn btn-primary" id="tombolsimpan">Simpan</button>
     </div>
   </form>
+  
+    <a href="index.html">Kembali ke daftar pelanggan</a>
 
   <script type="module">
     import { tambahPelanggan, hapusPelanggan} from "./main.js";
