--- a/formubah.html
+++ b/formubah.html
@@ -39,6 +39,8 @@
   }
 </style>
 
+  <a href="index.html">Kembali ke daftar pelanggan</a>
+
   <script type="module">
     import { ubahPelanggan, ambilPelanggan } from "./main.js";
 
